// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invoices List - Buckets expect buckets to render normally with total on desktop 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-16rba7c-MuiGrid-root"
  >
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1ccmj8s-MuiTypography-root"
        data-testid="invoices-title"
      >
        Invoices
      </h5>
    </div>
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-116lvfj-MuiTypography-root-MuiLink-root"
        data-testid="pay-bills-link"
        href="http://fortiline.billtrust.com/"
        target="_blank"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-khny8r-MuiButtonBase-root-MuiButton-root"
          data-testid="pay-bills-button"
          tabindex="0"
          type="button"
        >
          Pay Bills
        </button>
      </a>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1eaxmxz-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-5 css-1tbfxyr-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-gdta9y"
            data-testid="total-button"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 css-mv24kk-MuiTypography-root"
            >
              Total Open Invoices
            </h5>
            <h6
              class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
            >
              $1,601,146.15
            </h6>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-15g9bfh-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="future-button"
            id="Future"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Future
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $464,645.37
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="current-button"
            id="Current"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Current
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $1,066,040.16
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="past-due-button"
            id="Past due"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Past due
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $535,105.99
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-auto css-7n75yl-MuiGrid-root"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-1h8splt-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-1pw20x4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1o54jkx-MuiGrid-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1x6wq0a-MuiTypography-root"
          >
            Past Due Invoices
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-14hkifp"
            data-testid="31-60-days-button"
            id="31-60 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  31-60 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $27,524.50
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1vm07pg"
            data-testid="61-90-days-button"
            id="61-90 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  61-90 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  -$3,685.85
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1bu0loc"
            data-testid="91-120-days-button"
            id="91-120 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  91-120 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $23,931.21
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-18fza9m"
            data-testid="121-days-button"
            id="121+ days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  121+ days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $22,690.76
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoices List - Buckets expect buckets to render normally with total on mobile 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-16rba7c-MuiGrid-root"
  >
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1ccmj8s-MuiTypography-root"
        data-testid="invoices-title"
      >
        Invoices
      </h5>
    </div>
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-116lvfj-MuiTypography-root-MuiLink-root"
        data-testid="pay-bills-link"
        href="http://fortiline.billtrust.com/"
        target="_blank"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-khny8r-MuiButtonBase-root-MuiButton-root"
          data-testid="pay-bills-button"
          tabindex="0"
          type="button"
        >
          Pay Bills
        </button>
      </a>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1eaxmxz-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-5 css-1tbfxyr-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-gdta9y"
            data-testid="total-button"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 css-mv24kk-MuiTypography-root"
            >
              Total Open Invoices
            </h5>
            <h6
              class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
            >
              $1,601,146.15
            </h6>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-15g9bfh-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="future-button"
            id="Future"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-y5015x-MuiTypography-root"
                >
                  Future
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignRight css-1hmmxka-MuiTypography-root"
                >
                  $464,645.37
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="current-button"
            id="Current"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-y5015x-MuiTypography-root"
                >
                  Current
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignRight css-1hmmxka-MuiTypography-root"
                >
                  $1,066,040.16
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="past-due-button"
            id="Past due"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-y5015x-MuiTypography-root"
                >
                  Past due
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignRight css-1hmmxka-MuiTypography-root"
                >
                  $535,105.99
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-auto css-7n75yl-MuiGrid-root"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-1h8splt-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-1pw20x4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1o54jkx-MuiGrid-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1x6wq0a-MuiTypography-root"
          >
            Past Due Invoices
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-14hkifp"
            data-testid="31-60-days-button"
            id="31-60 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  31-60 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $27,524.50
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1vm07pg"
            data-testid="61-90-days-button"
            id="61-90 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  61-90 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  -$3,685.85
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1bu0loc"
            data-testid="91-120-days-button"
            id="91-120 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  91-120 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $23,931.21
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-18fza9m"
            data-testid="121-days-button"
            id="121+ days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  121+ days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $22,690.76
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Invoices List - Buckets expect buckets to render with no data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-16rba7c-MuiGrid-root"
  >
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1ccmj8s-MuiTypography-root"
        data-testid="invoices-title"
      >
        Invoices
      </h5>
    </div>
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-116lvfj-MuiTypography-root-MuiLink-root"
        data-testid="pay-bills-link"
        href="http://fortiline.billtrust.com/"
        target="_blank"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-khny8r-MuiButtonBase-root-MuiButton-root"
          data-testid="pay-bills-button"
          tabindex="0"
          type="button"
        >
          Pay Bills
        </button>
      </a>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1eaxmxz-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-5 css-1tbfxyr-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-gdta9y"
            data-testid="total-button"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 css-mv24kk-MuiTypography-root"
            >
              Total Open Invoices
            </h5>
            <h6
              class="MuiTypography-root MuiTypography-h6 css-q06gxe-MuiTypography-root"
            >
              $0.00
            </h6>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-15g9bfh-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="future-button"
            id="Future"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Future
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="current-button"
            id="Current"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Current
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-aaybsc"
            data-testid="past-due-button"
            id="Past due"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1ddls0f-MuiTypography-root"
                >
                  Past due
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1vd1hjk-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-auto css-7n75yl-MuiGrid-root"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-1h8splt-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1.5 MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-1pw20x4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1o54jkx-MuiGrid-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1x6wq0a-MuiTypography-root"
          >
            Past Due Invoices
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-14hkifp"
            data-testid="31-60-days-button"
            id="31-60 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  31-60 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1vm07pg"
            data-testid="61-90-days-button"
            id="61-90 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  61-90 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-1bu0loc"
            data-testid="91-120-days-button"
            id="91-120 days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  91-120 days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true css-b4v11c-MuiGrid-root"
        >
          <button
            class="MuiBox-root css-18fza9m"
            data-testid="121-days-button"
            id="121+ days"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-60gzhg-MuiGrid-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1sdzp21-MuiTypography-root"
                >
                  121+ days
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 css-1oli4zh-MuiGrid-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-9rrs56-MuiTypography-root"
                >
                  $0.00
                </h6>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
